# PromptTemplate

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
prompt_template/: __init__.py  analyzer.py  cli.py  formatters.py  models.py  quality.py  registry.py  renderer.py  semantic.py  template.py  validator.py
templates/examples/: code-reviewer.yaml  linus-code-reviewer.yaml  qa-assistant.yaml  summarizer.yaml
tests/: __init__.py  test_analyzer.py  test_cli.py  test_quality.py  test_registry.py  test_semantic.py  test_template.py
