[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-template"
version = "0.1.0"
description = "A powerful prompt template tool for managing and rendering LLM prompts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["prompt", "template", "llm", "ai", "jinja2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]
analysis = [
    "tiktoken>=0.5.0",
]
all = [
    "tiktoken>=0.5.0",
    "pyperclip>=1.8.0",
]

[project.scripts]
prompt = "prompt_template.cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/prompt-template"
Documentation = "https://github.com/yourusername/prompt-template#readme"
Repository = "https://github.com/yourusername/prompt-template"
Issues = "https://github.com/yourusername/prompt-template/issues"

[tool.hatch.build.targets.wheel]
packages = ["prompt_template"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=prompt_template"
